edit index page

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
     </header>
 
     <section class="cards">
-        <div class="JS basic">
-            <h3>HTML Syntax, Element Paragraph, Headings</h3>
+        <div class="card">
+            <h3>JS Basic</h3>
             <ul>
                 <li><a href="js basic/DataTypes _and_Operators1.html" target="_blank">DataTypes and Operators1</a></li>
                 <li><a href="js basic/DataTypes _and_Operators2.html" target="_blank">DataTypes and Operators2</a></li>
