--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="keywords" content="HTML, CSS, JS, Coding Academy, Orange">
 
     <style>
-      
         * {
             margin: 0;
             padding: 0;
@@ -16,26 +15,34 @@
         }
 
         body {
-            font-family: 'Times New Roman', serif; 
-            background-color: #e3f2fd;
-            color: #0d47a1;
+            font-family: 'Arial', sans-serif; 
+            background-color: #0d1b2a;
+            color: #ffffff;
             padding: 20px;
         }
 
         header {
             text-align: center;
             margin-bottom: 50px;
-            background-color: #1e88e5;
+            background-color: #001f54;
             padding: 30px;
             border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 0 15px rgba(0, 147, 233, 0.7), 0 0 30px rgba(0, 147, 233, 0.5);
         }
 
         h1 {
             font-size: 2.5em;
-            color: #ffffff;
+            color: #00eaff;
             letter-spacing: 2px;
             text-transform: uppercase;
+            text-shadow: 0 0 10px #00eaff, 0 0 20px #00eaff;
+        }
+
+        p {
+            color: #99dfff;
+            font-size: 1.2em;
+            margin-top: 10px;
+            text-shadow: 0 0 10px #00eaff, 0 0 20px #00eaff;
         }
 
         .cards {
@@ -45,24 +52,25 @@
         }
 
         .card {
-            background-color: #ffffff;
+            background-color: #021b3d;
             padding: 20px;
             border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            transition: transform 0.2s ease, box-shadow 0.2s ease;
+            box-shadow: 0 0 15px rgba(0, 147, 233, 0.5), 0 0 30px rgba(0, 147, 233, 0.3);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
             text-align: left;
+            color: #00eaff;
         }
 
         .card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+            transform: translateY(-10px);
+            box-shadow: 0 0 30px #00eaff, 0 0 60px #00eaff;
         }
 
         .card h3 {
             margin-bottom: 15px;
-            color: #1565c0;
+            color: #00eaff;
             font-size: 1.5em;
-            border-bottom: 1px solid #bbdefb;
+
             padding-bottom: 10px;
             text-transform: capitalize;
             line-height: 1.4; 
@@ -81,21 +89,39 @@
 
         .card ul li a {
             text-decoration: none;
-            color: #0d47a1;
+            color: #00eaff;
             font-size: 1.1em;
-            transition: color 0.2s ease;
+            background-color: rgba(0, 147, 233, 0.1);
+            margin: 5%;
+            padding: 8px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: 0 0 10px rgba(0, 147, 233, 0.3);
         }
 
         .card ul li a:hover {
-            color: #1e88e5; 
+            background-color: #001f54;
+            color: #ffffff;
+            box-shadow: 0 0 20px #00eaff, 0 0 40px #00eaff;
         }
 
         footer {
             text-align: center;
             margin-top: 50px;
             font-size: 0.9em;
-            color: #7f8c8d;
+            color: #99dfff;
+            text-shadow: 0 0 10px #00eaff, 0 0 20px #00eaff;
         }
+
+        footer a {
+            color: #00eaff;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+
     </style>
 </head>
 <body>
