edit index page

--- a/index.html
+++ b/index.html
@@ -142,6 +142,40 @@
                 <li><a href="js basic/function1.html" target="_blank">function</a></li>
             </ul>
         </div>
+        <div class="card">
+            <h3>IF statment, loop function, Array and object at JS</h3>
+            <ul>
+                <li><a href="JS tasks2/IF Statement.html" target="_blank">IF statment</a></li>
+                <li><a href="JS tasks2/JavaScript Arrays .html" target="_blank">JavaScript Arrays</a></li>
+                <li><a href="JS tasks2/JavaScript loops.html" target="_blank">JavaScript loop</a></li>
+                <li><a href="JS tasks2/JavaScript Functions .html" target="_blank">JavaScript Function</a></li>
+                <li><a href="JS tasks2/Objects.html" target="_blank">JS Object </a></li>
+            </ul>
+        </div>
+        <div class="card">
+            <h3>JavaScript DOM </h3>
+            <ul>
+                <li><a href="JavaScript DOM/exc1.html" target="_blank"> Basic Exercise 1</a></li>
+                <li><a href="JavaScript DOM/exc2.html" target="_blank"> Basic Exercise 2</a></li>
+                <li><a href="JavaScript DOM/exc3.html" target="_blank"> Basic Exercise 3</a></li>
+                <li><a href="JavaScript DOM/exc4.html" target="_blank"> Basic Exercise 4</a></li>
+                <li><a href="JavaScript DOM/exc5.html" target="_blank"> Basic Exercise 5</a></li>
+                <li><a href="JavaScript DOM/exc6.html" target="_blank"> Mid Exercise 6</a></li>
+                <li><a href="JavaScript DOM/exc7.html" target="_blank"> Mid Exercise 7</a></li>
+                <li><a href="JavaScript DOM/exc8.html" target="_blank"> Advanced Exercise 8</a></li>
+                <li><a href="JavaScript DOM/exc 9.html" target="_blank"> Advanced Exercise 9</a></li>
+            </ul>
+        </div>
+        <div class="card">
+            <h3>More Tasks </h3>
+            <ul>
+                <li><a href="tskgarden/GardenFlower.html" target="_blank"> GardenFlower 'JSON'</a></li>
+                <li><a href="pokeap/api.html" target="_blank"> Pokemon API</a></li>
+                <li><a href="car api/api.html" target="_blank"> Car API</a></li>
+                <li><a href="cauntry api/api.html" target="_blank"> Country API</a></li>
+              
+            </ul>
+        </div>
     </section>
 </body>
 </html>
