add weather API index

--- a/index.html
+++ b/index.html
@@ -173,6 +173,8 @@
                 <li><a href="pokeap/api.html" target="_blank"> Pokemon API</a></li>
                 <li><a href="car api/api.html" target="_blank"> Car API</a></li>
                 <li><a href="cauntry api/api.html" target="_blank"> Country API</a></li>
+                <li><a href="weather/index.html" target="_blank"> Weather APP API</a></li>
+
               
             </ul>
         </div>
